deploy: eb867342f12a20ec1dfd5eb6b1b461b950ccb286

--- a/_sources/module_02/03_Linear_Regression_with_Real_Data.ipynb
+++ b/_sources/module_02/03_Linear_Regression_with_Real_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38578ba2",
+   "id": "9ab220d8",
    "metadata": {},
    "source": [
     "> __Content modified under Creative Commons Attribution license CC-BY\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "872aa734",
+   "id": "60634683",
    "metadata": {},
    "source": [
     "# 03 - Linear regression with real data"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b069b726",
+   "id": "ec9a117b",
    "metadata": {},
    "source": [
     "## Earth temperature over time\n",
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "06a65c3a",
+   "id": "33c592a6",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "></iframe>\n"
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fd9c43a52b0>"
+       "<IPython.lib.display.YouTubeVideo at 0x7fd2c4b784f0>"
       ]
      },
      "execution_count": 1,
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "834db513",
+   "id": "a99b17b1",
    "metadata": {},
    "source": [
     "How would you go about understanding the _trends_ from the data on global temperature?\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8583e7a6",
+   "id": "3d4d8964",
    "metadata": {},
    "source": [
     "## Step 1: Read a data file\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1596be48",
+   "id": "8db56d99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf0ef31",
+   "id": "dc10ee61",
    "metadata": {},
    "source": [
     "To load our data from the file, you'll use the function [`numpy.loadtxt()`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.loadtxt.html), which lets us immediately save the data into NumPy arrays. (We encourage you to read the documentation for details on how the function works.) Here, you'll save the data into the arrays `year` and `temp_anomaly`."
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "80d8c11a",
+   "id": "2a179286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab2c581a",
+   "id": "60599667",
    "metadata": {},
    "source": [
     "## Exercise\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "30ca26cc",
+   "id": "a8558f60",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e66af62",
+   "id": "9f4a43de",
    "metadata": {},
    "source": [
     "## Step 2: Plot the data\n",
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6e356a6b",
+   "id": "6d9de453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba351c8e",
+   "id": "3acb5cba",
    "metadata": {},
    "source": [
     "The `plot()` function of the `pyplot` module makes simple line plots. You avoid that stuff that appeared on top of the figure, that `Out[x]: [< ...>]` ugliness, by adding a semicolon at the end of the plotting command."
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "84ecd77f",
+   "id": "96b6acab",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4bf96a",
+   "id": "5b13b1ee",
    "metadata": {},
    "source": [
     "## Step 3: Least-squares linear regression \n",
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ef85bc",
+   "id": "46997ec4",
    "metadata": {},
    "source": [
     "### What is the \"best\" fit?\n",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aa9fd42",
+   "id": "46797bf8",
    "metadata": {},
    "source": [
     "### Linear regression \n",
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87daafcd",
+   "id": "651431d0",
    "metadata": {},
    "source": [
     "### Let's fit!\n",
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "201fdc45",
+   "id": "479317a7",
    "metadata": {},
    "source": [
     "## Exercise \n",
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "95ae0646",
+   "id": "05d9ea3b",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc9e30da",
+   "id": "fed40804",
    "metadata": {},
    "source": [
     "Now that you have mean values, you can compute our coefficients by following equations (12). You first calculate $a_1$ and then use that value to calculate $a_0$.\n",
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572cd4aa",
+   "id": "58440430",
    "metadata": {},
    "source": [
     "We already calculated the mean values of the data arrays, but the formula requires two sums over new derived arrays. Guess what, NumPy has a built-in function for that: [`numpy.sum()`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.sum.html). Study the code below."
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "76371730",
+   "id": "f6ecfeea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a7c31b03",
+   "id": "dc7c2af1",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "84b4d43d",
+   "id": "c5d3707b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0f7f9832",
+   "id": "68c02458",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bfdd9bc",
+   "id": "831e83c0",
    "metadata": {},
    "source": [
     "##### Exercise\n",
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5a762759",
+   "id": "569c777d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f139db99",
+   "id": "75ed4eb8",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0141b44",
+   "id": "5dcb9ffa",
    "metadata": {},
    "source": [
     "We now have the coefficients of a linear function that best fits our data. With them, you can compute the predicted values of temperature anomaly, according to our fit. Check again the equations above: the values you are going to compute are $f(x_i)$. \n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "12779395",
+   "id": "292c060c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e82041",
+   "id": "424d3460",
    "metadata": {},
    "source": [
     "With the values of our linear regression, you can plot it on top of the original data to see how they look together. Study the code below."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2ec8759d",
+   "id": "ae7d2f04",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c609d1",
+   "id": "0817378c",
    "metadata": {},
    "source": [
     "## Step 4: Apply regression using NumPy"
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae823fa3",
+   "id": "5588ad1f",
    "metadata": {},
    "source": [
     "Above, you coded linear regression from scratch. But, guess what: you didn't have to because NumPy has built-in functions that do what you need!\n",
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "07e3cb20",
+   "id": "460f281e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8a11bc50",
+   "id": "843a38bc",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2f113b9c",
+   "id": "feb835bf",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7969ae10",
+   "id": "72ef2fee",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e2869c5",
+   "id": "2b8bb855",
    "metadata": {},
    "source": [
     "The assignment `f_linear = np.poly1d((a_1n,a_0n))` creates a 1D polynomial. This means that the function only has one independent variable i.e. f(x) = (some value). You can create your own polynomial functions in a similar way using _anonymous functions_ i.e. `lambda`.\n",
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "515980f4",
+   "id": "7542aa89",
    "metadata": {},
    "source": [
     "## Exercise\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b6c8fba6",
+   "id": "c0cce3b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4cbd7b30",
+   "id": "188131ed",
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd5299cc",
+   "id": "c7d159c5",
    "metadata": {},
    "source": [
     "## \"Split regression\""
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb675b6c",
+   "id": "b01f45b2",
    "metadata": {},
    "source": [
     "If you look at the plot above, you might notice that around 1970 the temperature starts increasing faster that the previous trend. So maybe one single straight line does not give us a good-enough fit.\n",
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0133852d",
+   "id": "31284656",
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b33ec0",
+   "id": "91d15450",
    "metadata": {},
    "source": [
     "To split the data, you use the powerful instrument of _slicing_ with the colon notation. Remember that a colon between two indices indicates a range of values from a `start` to an `end`. The rule is that `[start:end]` includes the element at index `start` but excludes the one at index `end`. For example, to grab the first 3 years in our `year` array, you do:"
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b5000a88",
+   "id": "eacdaa9a",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bbfc567",
+   "id": "f809aad2",
    "metadata": {},
    "source": [
     "Now you know how to split our data in two sets, to get two regression lines. You need two slices of the arrays `year` and `temp_anomaly`, which you'll save in new variable names below. After that, you complete two linear fits using the helpful NumPy functions you learned above."
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5df6e135",
+   "id": "d9fe8108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a6597770",
+   "id": "043995f9",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d450a364",
+   "id": "49502346",
    "metadata": {},
    "source": [
     "## Discussion exercise\n",
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5340048",
+   "id": "e70b0472",
    "metadata": {},
    "source": [
     "## you learned:\n",
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8914cea5",
+   "id": "772ae511",
    "metadata": {},
    "source": [
     "## References\n",
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51ed689f",
+   "id": "d48f62ef",
    "metadata": {},
    "source": [
     "# Problems\n",
@@ -1131,13 +1131,13 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4492834c",
+   "id": "42acafcd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd98f5b9610>]"
+       "[<matplotlib.lines.Line2D at 0x7fd28fd79400>]"
       ]
      },
      "execution_count": 26,
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "60b989c0",
+   "id": "8eb0f8f6",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3989c1fd",
+   "id": "a1dcb431",
    "metadata": {},
    "source": [
     "2. You plotted Gordon Moore's empirical prediction that the rate of semiconductors on a computer chip would double every two years in [02_Seeing_Stats](./02_Seeing_Stats). This prediction was known as Moore's law. Gordon Moore had originally only expected this empirical relation to hold from 1965 - 1975 [[1](https://en.wikipedia.org/wiki/Moore%27s_law),[2](https://spectrum.ieee.org/computing/hardware/gordon-moore-the-man-whose-name-means-progress)], but semiconductor manufacuturers were able to keep up with Moore's law until 2015. \n",
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "641ec7e8",
+   "id": "4a2d7d13",
    "metadata": {},
    "outputs": [
     {
