--- a/_sources/module_03/03_Get_Oscillations.ipynb
+++ b/_sources/module_03/03_Get_Oscillations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3dba9cf5",
+   "id": "a22299ff",
    "metadata": {},
    "source": [
     "> __Content modified under Creative Commons Attribution license CC-BY\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6f79a9",
+   "id": "b61634b2",
    "metadata": {},
    "source": [
     "# Get with the oscillations\n",
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9b2c72ad",
+   "id": "2ae63e28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ac4c7a3",
+   "id": "62f90280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "302cd55d",
+   "id": "cd235f8f",
    "metadata": {},
    "source": [
     "## Spring-mass system\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b51f6dbd",
+   "id": "77be7e5e",
    "metadata": {},
    "source": [
     "## Simple spring-mass system, without friction.\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c47dd4b",
+   "id": "854793b5",
    "metadata": {},
    "source": [
     "### System in vector form\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a66d782c",
+   "id": "c50016e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c0592e8",
+   "id": "fc1845e2",
    "metadata": {},
    "source": [
     "This worked example follows Reference [1], section 4.3 (note that the source is open access). You set the parameters of the system, choose a time interval equal to 1-20th of the oscillation period, and decide to solve the motion for a duration equal to 3 periods."
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f38d4cc",
+   "id": "b7f433e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9a59ae9",
+   "id": "f0f9afcf",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b30166b",
+   "id": "b58e8465",
    "metadata": {},
    "source": [
     "Next, set up the time array and initial conditions, initialize the solution array with zero values, and assign the initial values to the first elements of the solution array."
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6334fd5",
+   "id": "8e6bff0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11091feb",
+   "id": "02695661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ed7b9ecc",
+   "id": "83c06105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6b7eade9",
+   "id": "45df4aed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f2bfc58",
+   "id": "640249bf",
    "metadata": {},
    "source": [
     "You're ready to solve! Step through the time increments, calling the `eulerstep()` function with the `springmass` right-hand-side derivatives and time increment as inputs."
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f9a98cfb",
+   "id": "935a2644",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2972ea8f",
+   "id": "6fde0e7e",
    "metadata": {},
    "source": [
     "Now, let's compute the position with respect to time using the known analytical solution, so that you can compare the numerical result with it. Below, you make a plot including both numerical and analytical values in our chosen time range."
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6ece1f44",
+   "id": "f23f7085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aaa20742",
+   "id": "91da7440",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "545a6f1d",
+   "id": "cbf22646",
    "metadata": {},
    "source": [
     "Yikes! The numerical solution exhibits a marked growth in amplitude over time, which certainly is not what the physical system displays. _What is wrong with Euler's method?_"
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fec7922",
+   "id": "6ae7f210",
    "metadata": {},
    "source": [
     "##### Exercise: \n",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e69dfa2",
+   "id": "62f58384",
    "metadata": {},
    "source": [
     "## Euler-Cromer method\n",
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "912ada84",
+   "id": "bfa5a3db",
    "metadata": {},
    "source": [
     "Let's see what it does. Study the function below carefully—it helps a lot if you write things out on a piece of paper!"
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a071f789",
+   "id": "959519bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31bbe8af",
+   "id": "8f9344ba",
    "metadata": {},
    "source": [
     "You've copied the whole problem set-up below, to get the solution in one\n",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "85d82dbe",
+   "id": "aa455926",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "408fe73b",
+   "id": "9ba0c915",
    "metadata": {},
    "source": [
     "Recompute the analytical solution, and plot it alongside the numerical\n",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "87c70296",
+   "id": "74a5525d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "78bb9809",
+   "id": "e8cab422",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "029b6583",
+   "id": "ef8a43e4",
    "metadata": {},
    "source": [
     "The plot shows that Euler-Cromer does not have the problem of growing\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb4f3462",
+   "id": "839da292",
    "metadata": {},
    "source": [
     "But if you plot the end of a long period of simulation, you can see that it does start to  deviate from the analytical solution."
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f3651aab",
+   "id": "162d7322",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7bf00bd",
+   "id": "6d03948a",
    "metadata": {},
    "source": [
     "Looking at the last few oscillations in a very long run shows a slight phase difference, even with a very small time increment. So although the Euler-Cromer method fixes a big problem with Euler's method, it still has some error. It's still a first-order method!\n",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f8f091d",
+   "id": "981b1b9e",
    "metadata": {},
    "source": [
     "## Convergence\n",
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028c280f",
+   "id": "5c9996ac",
    "metadata": {},
    "source": [
     "How could you confirm the order of convergence of a numerical method? In the lucky scenario of having an analytical solution to directly compute the error, all you need to do is solve numerically with different values of $\\Delta t$ and see if the error really varies linearly with this parameter.\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cc284307",
+   "id": "3041f810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be10a8bb",
+   "id": "fa8d79be",
    "metadata": {},
    "source": [
     "You need to compute the error with our chosen norm, so let's write a function for that. It includes a line to obtain the values of the analytical solution at the needed instant of time, and then it takes the difference with the numerical solution to compute the error."
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e3b1d9be",
+   "id": "aa412742",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2704da",
+   "id": "c9853038",
    "metadata": {},
    "source": [
     "All that is left to do is to call the error function with our chosen values of $\\Delta t$, and plot the results. A logarithmic scale on the plot confirms close to linear scaling between error and time increment."
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "78b0abd5",
+   "id": "e5839be0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6811a2d3",
+   "id": "38bc7f15",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f44fa39f",
+   "id": "3ad491ef",
    "metadata": {},
    "source": [
     "What do you see in the plot of the error as a function of $\\Delta t$? It looks like a straight line, with a slope close to 1. On a log-log convergence plot, a slope of 1 indicates that you have a first-order method: the error scales as ${\\mathcal O}(\\Delta t)$—using the \"big-O\" notation. It means that the error is proportional to the time increment: $ error \\propto \\Delta t.$"
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c6ccf8d",
+   "id": "d30f387a",
    "metadata": {},
    "source": [
     "## Modified Euler's method\n",
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ace607c6",
+   "id": "6a900548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c3d550",
+   "id": "a0840e1e",
    "metadata": {},
    "source": [
     "Let's see how it performs with our spring-mass model."
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "52313c8a",
+   "id": "cd5f5140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,13 +852,13 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e55c8622",
+   "id": "2b67eb9a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f02d55767f0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc99f8f8340>]"
       ]
      },
      "execution_count": 24,
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ed9ab022",
+   "id": "4be389ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1ad0fe7f",
+   "id": "52eb1fc2",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ba15da",
+   "id": "b36eee6d",
    "metadata": {},
    "source": [
     "The convergence plot, in this case, does look close to a slope-2 line. Modified Euler's method is second-order accurate: \n",
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22de555b",
+   "id": "b6c730bf",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c1c8cbe",
+   "id": "876b4a30",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "27d01790",
+   "id": "aa73c811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e75a87b5",
+   "id": "476a040e",
    "metadata": {},
    "source": [
     "## Why use implicit methods?\n",
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "92874269",
+   "id": "d4cefed0",
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "797d26c7",
+   "id": "52298ddb",
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a550ee1",
+   "id": "0d38ea29",
    "metadata": {},
    "source": [
     "## Discussion\n",
@@ -1142,14 +1142,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f120bdd7",
+   "id": "ae1ac4d6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8e8d7c71",
+   "id": "cb808395",
    "metadata": {},
    "source": [
     "## What you've learned\n",
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906ebd79",
+   "id": "0e542f94",
    "metadata": {},
    "source": [
     "## References\n",
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a4c5cda",
+   "id": "9189a2e7",
    "metadata": {},
    "source": [
     "# Problems\n",
@@ -1192,14 +1192,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e208e8",
+   "id": "f9629ac5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "69da00b7",
+   "id": "03d3000d",
    "metadata": {},
    "source": [
     "<img src=\"../images/damped-spring.png\" style=\"width: 400px;\"/>"
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1afed9a",
+   "id": "d9757746",
    "metadata": {},
    "source": [
     "2. In the image above, you have a spring, mass, _and damper_. A damper is designed to slow down a moving object. These devices are typical in automobiles, mountain bikes, doors, any place where oscillations may not be desired, but motion is required. The new differential equation, if F(t)=0, that results from this addition is\n",
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "732c889e",
+   "id": "0743e61d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e171ee6",
+   "id": "9fbb4967",
    "metadata": {},
    "source": [
     "3. Use three methods to integrate your `smd` function for 3 time periods of oscillation ( $t=0...6\\pi$ ) and initial conditions x(0)=2 m and v(0)=0 m/s. Plot the three solutions on one graph with labels. \n",
@@ -1268,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55fc627",
+   "id": "1b6d8c78",
    "metadata": {},
    "outputs": [],
    "source": []
