--- a/_sources/module_03/04_Getting_to_the_root.ipynb
+++ b/_sources/module_03/04_Getting_to_the_root.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "de3e5834",
+   "id": "ca37ad34",
    "metadata": {},
    "source": [
     "> __Content modified under Creative Commons Attribution license CC-BY\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5ed2f214",
+   "id": "9ef284ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "97045056",
+   "id": "f7c2a929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5cd4754e",
+   "id": "a883b7ac",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0e8cf7fa",
+   "id": "7cf47256",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94675793",
+   "id": "d2ea22c2",
    "metadata": {},
    "source": [
     "The Brute force method is plot f_m vs m and with smaller and smaller steps until f_m ~ 0, but you can do much better. \n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9e345d9",
+   "id": "26f5412b",
    "metadata": {},
    "source": [
     "## Discussion\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cb2e6c63",
+   "id": "04ff56d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50fe8342",
+   "id": "2fcb218d",
    "metadata": {},
    "source": [
     "## Test your function\n",
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d75ec9d0",
+   "id": "c9275783",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b3d30ce",
+   "id": "788d35bc",
    "metadata": {},
    "source": [
     "## Success - incsearch works\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "52fe1542",
+   "id": "887a39fb",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9106dac9",
+   "id": "c2ca5642",
    "metadata": {},
    "source": [
     "## Exercise \n",
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "16ff7ae6",
+   "id": "619d1c75",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7a619e",
+   "id": "c35e5c69",
    "metadata": {},
    "source": [
     "Now, you have reduced your region of interest to just 125-200 kg. \n",
@@ -396,14 +396,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd413f95",
+   "id": "888a017c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a842d3d5",
+   "id": "3c3424ab",
    "metadata": {},
    "source": [
     "## Bisect Function\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b026538d",
+   "id": "1a3ac8f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d456f83c",
+   "id": "7ada2973",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24c8cab2",
+   "id": "247aa7a7",
    "metadata": {},
    "source": [
     "## Recursive functions\n",
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc0ad1d",
+   "id": "2ce7ce42",
    "metadata": {},
    "source": [
     "## Newton-Raphson example\n",
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "11fbb1f9",
+   "id": "8bcf9431",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6591d4f3",
+   "id": "f97fe012",
    "metadata": {},
    "source": [
     "We can use the definitions of `f_h` and `dfdh` to calculate the height, $h$ to fill the tank."
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cdf85549",
+   "id": "9d63d16d",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "227c8a50",
+   "id": "77e64da3",
    "metadata": {},
    "source": [
     "## Discussion\n",
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaaa8245",
+   "id": "79e3cb0c",
    "metadata": {},
    "source": [
     "## Create a Newton-Raphson function\n",
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "068b410b",
+   "id": "148312c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1e4ee9eb",
+   "id": "0b0a3553",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7d0dcee",
+   "id": "cd60ac3e",
    "metadata": {},
    "source": [
     "## Compare techniques\n",
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9aadf79f",
+   "id": "ef1fd0c4",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2e79195",
+   "id": "369e7d8e",
    "metadata": {},
    "source": [
     "## Discussion\n",
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e999cb9d",
+   "id": "9265d533",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f6dab014",
+   "id": "836c1896",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93367b82",
+   "id": "1b8e86e4",
    "metadata": {},
    "source": [
     "The modified secant can converge as quick as the Newton-Raphson method, but there is no universal $\\delta x$ that works well for every problem. Typically, it is set as a small number and then varied based upon the conergence rate for the problem. \n",
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0802a7a2",
+   "id": "93987bd3",
    "metadata": {},
    "source": [
     "![The shooting method imagined as a catapult aiming at a target](../images/shooting.png)\n",
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8e2a0d88",
+   "id": "8f594cb8",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca0ac53",
+   "id": "1685b27c",
    "metadata": {},
    "source": [
     "Now, let's look at the `fall_drag` function you created that described the motion of the tennis ball. Remember, this function returns the derivative of the state. So if you input\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fac22d0a",
+   "id": "b2a446c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09c372e3",
+   "id": "7b1a1df7",
    "metadata": {},
    "source": [
     "To get the position as a function of time, you can use any of the integration methods that you defined in [03_Get_Oscillations](./03_Get_Oscillations.ipynb). Here you copy in the second-order Runge-Kutta explicit method."
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "342650d3",
+   "id": "ffdd5026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39fcf7b2",
+   "id": "c3b34ca9",
    "metadata": {},
    "source": [
     "## Defining your problem for Python \n",
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4209b7c5",
+   "id": "a18d11a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f046bcf2",
+   "id": "857ca7ea",
    "metadata": {},
    "source": [
     "Take a look at the pieces of this function:\n",
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f3d06c6d",
+   "id": "d8b32fb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3fee9bed",
+   "id": "6a4a921f",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc7cfc6b",
+   "id": "899b2334",
    "metadata": {},
    "source": [
     "## Exercise\n",
@@ -1152,14 +1152,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "176bf131",
+   "id": "438bc82b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4eb53467",
+   "id": "1dfb4c0f",
    "metadata": {},
    "source": [
     "## Solving the engineering problem\n",
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "55b05913",
+   "id": "5c28dabb",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c19c1fd",
+   "id": "51ee4c5f",
    "metadata": {},
    "source": [
     "## Exercise\n",
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "748d90e7",
+   "id": "0434e1fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9a78582",
+   "id": "bc5c2fc5",
    "metadata": {},
    "source": [
     "## What you've learned\n",
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "888e45b2",
+   "id": "5bbcea5e",
    "metadata": {},
    "source": [
     "## References\n",
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23149514",
+   "id": "75e32c11",
    "metadata": {},
    "source": [
     "# Problems\n",
@@ -1269,14 +1269,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b982cc92",
+   "id": "d41a3737",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a7684c2d",
+   "id": "8a74bf8e",
    "metadata": {},
    "source": [
     "2. In the examples shown above, you determined the initial velocity after the first bounce by specifying the beginning y(0) and end y(T) for an object subject to gravity and drag. Repeat this analysis for the time period just after the second bounce and just before the third bounce. The indices are given below for t[1430:2051] = 1.43-2.05 seconds.\n",
@@ -1289,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "da2634af",
+   "id": "cf3489d6",
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fdab8a00400>]"
+       "[<matplotlib.lines.Line2D at 0x7f2178f04670>]"
       ]
      },
      "execution_count": 26,
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfef4c2e",
+   "id": "00a373c5",
    "metadata": {},
    "outputs": [],
    "source": []
