--- a/_sources/module_01/03_Numerical_error.ipynb
+++ b/_sources/module_01/03_Numerical_error.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e109a5d4",
+   "id": "bb286f44",
    "metadata": {},
    "source": [
     "> __Content modified under Creative Commons Attribution license CC-BY\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f29709e4",
+   "id": "98e12b8d",
    "metadata": {},
    "source": [
     "# 03 - Numerical Error\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a70af297",
+   "id": "71c46c46",
    "metadata": {},
    "source": [
     "### Define constants and analytical solution (meters-kilogram-sec)\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d383d21c",
+   "id": "2f03ed1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0516589",
+   "id": "4f40dace",
    "metadata": {},
    "source": [
     "## Exercise:\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cb94d91",
+   "id": "73cee837",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "efb26d6d",
+   "id": "0b6a536a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f2e18c1",
+   "id": "dcb57107",
    "metadata": {},
    "source": [
     "Inside the curly brackets—the placeholders for the values you want to\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ffbca64",
+   "id": "142c36fe",
    "metadata": {},
    "source": [
     "If you print these values using the string formatter,  with a total\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "acb93ab6",
+   "id": "c3661b98",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02636c29",
+   "id": "bc89a88c",
    "metadata": {},
    "source": [
     "## Analytical vs Computational Solution\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f56a26a",
+   "id": "5a180477",
    "metadata": {},
    "source": [
     "## Define numerical method\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "574707e7",
+   "id": "f4a99e6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "433585a8",
+   "id": "6fbf6f0a",
    "metadata": {},
    "source": [
     "Now, you create a `for`-loop to solve for `v_numerical` at times 2, 4, 6, 8, 10, and 12 sec. We don't need to solve for `v_numerical` at time 0 seconds because this is the initial velocity of the object. In this example, the initial velocity is v(0)=0 m/s."
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7919b4d6",
+   "id": "1ba4947d",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ef1fc9",
+   "id": "c053d117",
    "metadata": {},
    "source": [
     "Let's print the time, velocity (analytical) and velocity (numerical) to compare the results in a table. We'll use the `print` and `format` commands to look at the results."
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f421e682",
+   "id": "d4124abf",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "779ee077",
+   "id": "2ba9b587",
    "metadata": {},
    "source": [
     "## Compare solutions (plotting)\n",
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3c136127",
+   "id": "7cffc273",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e435ba7f",
+   "id": "ce412196",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034f9436",
+   "id": "0786aa3a",
    "metadata": {},
    "source": [
     "**Note:** In the above plot, the numerical solution is given at discrete points connected by lines, while the analytical solution is drawn as a line. This is a helpful convention. We plot discrete data such as numerical solutions or measured data as points and lines while analytical solutions are drawn as lines. \n",
@@ -420,14 +420,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80eb3b2b",
+   "id": "9780f18c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "16d7cce9",
+   "id": "abb687d7",
    "metadata": {},
    "source": [
     "## Errors in Numerical Modeling\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "755904e4",
+   "id": "27f86f97",
    "metadata": {},
    "source": [
     "## 1- Truncation error\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb74391",
+   "id": "0eb3bbc9",
    "metadata": {},
    "source": [
     "### Truncation error as a Taylor series \n",
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d00297d3",
+   "id": "b0d65b6b",
    "metadata": {},
    "source": [
     "In the .gif below, the error in the function is reduced by including higher-order terms in the Taylor series approximation. \n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49187902",
+   "id": "00fdca44",
    "metadata": {},
    "source": [
     "## 2- Roundoff\n",
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270603e0",
+   "id": "24b7b4b0",
    "metadata": {},
    "source": [
     "1. digital representation of $\\pi$ \n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "32b35663",
+   "id": "ccbf5e9c",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e49914ca",
+   "id": "9d2c4c91",
    "metadata": {},
    "source": [
     "In order to store the number in a computer you can only use so many bits, shown below is the [64-bit standard for floating point numbers](https://en.wikipedia.org/wiki/Double-precision_floating-point_format):\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b1b1ab77",
+   "id": "85f4159d",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada17c4c",
+   "id": "1322e1f3",
    "metadata": {},
    "source": [
     "In the previous block of code, you see $\\pi$ printed for 3 cases:\n",
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9ba71c5f",
+   "id": "cc445d1d",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97aa0524",
+   "id": "aceb0c48",
    "metadata": {},
    "source": [
     "### Machine epsilon\n",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "886a688b",
+   "id": "bab76190",
    "metadata": {},
    "outputs": [
     {
@@ -688,14 +688,7 @@
      "output_type": "stream",
      "text": [
       "summation 1+eps/2 over  1000  minus 1 = 1.1102230246251565e-13\n",
-      "500.0 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*eps= 1.1102230246251565e-13\n"
+      "500.0 *eps= 1.1102230246251565e-13\n"
      ]
     }
    ],
@@ -713,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83da9f12",
+   "id": "8e4c2552",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -725,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2da8ae",
+   "id": "479bf333",
    "metadata": {},
    "source": [
     "## Freefall Model (revisited)\n",
@@ -744,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbbba45a",
+   "id": "371afdd6",
    "metadata": {},
    "source": [
     "### Freefall example\n",
@@ -764,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54d6ada",
+   "id": "914fb6f7",
    "metadata": {},
    "source": [
     "## Computer model error =  truncation + roundoff\n",
@@ -801,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "34542140",
+   "id": "2cae7552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96a8d50e",
+   "id": "ca6a6843",
    "metadata": {},
    "source": [
     "We can visualize how the approximation approaches the exact solution with this method. The process of approaching the \"true\" solution is called **convergence**. \n",
@@ -849,15 +842,15 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7705bf3e",
+   "id": "5f1f8c8e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 177 µs, sys: 34 µs, total: 211 µs\n",
-      "Wall time: 200 µs\n"
+      "CPU times: user 208 µs, sys: 41 µs, total: 249 µs\n",
+      "Wall time: 227 µs\n"
      ]
     }
    ],
@@ -870,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fcc7f5f",
+   "id": "590e808f",
    "metadata": {},
    "source": [
     "The block of code above assigned three variables from the function `freefall`. \n",
@@ -887,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "58eeea24",
+   "id": "40879dcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,13 +891,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "09c2dfa7",
+   "id": "583f1a5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2a18a20b20>"
+       "<matplotlib.legend.Legend at 0x7f9cac492f70>"
       ]
      },
      "execution_count": 16,
@@ -938,7 +931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d07efa2",
+   "id": "30672ff6",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -948,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12547e9e",
+   "id": "0ccfa908",
    "metadata": {},
    "source": [
     "### Convergence of a numerical model\n",
@@ -967,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1cde5588",
+   "id": "061ce000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8a2df95d",
+   "id": "4eaf40c9",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1016,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83119e8c",
+   "id": "93ec4719",
    "metadata": {},
    "source": [
     "In the above plot \"Truncation and roundoff error accumulation in log-log\n",
@@ -1036,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1498843e",
+   "id": "117f9bf8",
    "metadata": {},
    "source": [
     "## What you've learned\n",
@@ -1052,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d07a631",
+   "id": "7b478451",
    "metadata": {},
    "source": [
     "# Problems\n",
@@ -1088,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "754683b8",
+   "id": "d1e49522",
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "41e18464",
+   "id": "83b344bd",
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e99e59",
+   "id": "7a33a071",
    "metadata": {},
    "source": [
     "__d.__ As the number of time steps increases, the Euler approximation approaches the analytical solution, not the measured data. The best-case scenario is that the Euler solution is the same as the analytical solution."
@@ -1141,7 +1134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bba55ea",
+   "id": "f44f1e33",
    "metadata": {},
    "source": [
     "2. In the freefall example you used smaller time steps to decrease the **truncation error** in our Euler approximation. Another way to decrease approximation error is to continue expanding the Taylor series. Consider the function f(x)\n",
@@ -1160,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "89f42660",
+   "id": "afaffdc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "313a7a6c",
+   "id": "12b42504",
    "metadata": {},
    "outputs": [],
    "source": []
