--- a/_sources/module_05/02_Keep_it_steady.ipynb
+++ b/_sources/module_05/02_Keep_it_steady.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f069fe45",
+   "id": "d7a000bf",
    "metadata": {},
    "source": [
     "# Keep it Steady\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "da2db4dd",
+   "id": "a1097110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "51a028bf",
+   "id": "1077f2c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6543a9a",
+   "id": "f7252365",
    "metadata": {},
    "source": [
     "$\\left[\\begin{array}{cccccc}\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0d9a5698",
+   "id": "252b98ae",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3da7f1",
+   "id": "67931219",
    "metadata": {},
    "source": [
     "### Observing your set of equations\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "614c437e",
+   "id": "f583a311",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c3792ae",
+   "id": "e5bb4266",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -264,14 +264,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4b1156",
+   "id": "ea3bb874",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bf1a05e3",
+   "id": "59b3fa31",
    "metadata": {},
    "source": [
     "## Static beam deflections\n",
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b8fe12b",
+   "id": "0aebd0c7",
    "metadata": {},
    "outputs": [
     {
@@ -424,13 +424,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5c4e407e",
+   "id": "faae6e1d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8b430cdb20>]"
+       "[<matplotlib.lines.Line2D at 0x7f059942ddc0>]"
       ]
      },
      "execution_count": 6,
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d53a1c2d",
+   "id": "4084420c",
    "metadata": {},
    "source": [
     "### Exercise \n",
@@ -474,14 +474,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d70b4e71",
+   "id": "7f4ca0d4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3018beba",
+   "id": "3fdceff1",
    "metadata": {},
    "source": [
     "### Discussion\n",
@@ -492,14 +492,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5b47401",
+   "id": "08bec33c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d7d6e791",
+   "id": "13e883ad",
    "metadata": {},
    "source": [
     "## What You've Learned\n",
@@ -534,14 +534,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cb657a8",
+   "id": "562159eb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ad4f236e",
+   "id": "2e130160",
    "metadata": {},
    "source": [
     "2. Consider the encastre beam shown in the __Static Beam deflections__ section. Use the following material and geometry (1-m steel rod 1-cm-by-1-cm) with 100 N/m load applied\n",
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b393d305",
+   "id": "7db094fb",
    "metadata": {},
    "outputs": [],
    "source": []
